fix image overlap

--- a/src/style/tailwind.css
+++ b/src/style/tailwind.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+img {
+  content-visibility: unset !important;
+}
